--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="http://www.paypal.me/BoardSeatMeet">Support BoardSeatMeet.com</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="http://www.boardseatmeet.com">BoardSeatMeet, Inc.</a>
+          </li>
         </ul>
       </div>
     </div>
