--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>BoardSeatMeet, Inc.</title>
+  <title>BoardSeatMeet Inc.</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="http://www.boardseatmeet.com">BoardSeatMeet, Inc.</a>
+      <a class="navbar-brand js-scroll-trigger" href="http://www.boardseatmeet.com">BoardSeatMeet Inc.</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -39,13 +39,13 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Modernizing the Approach</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="http://www.paypal.me/BoardSeatMeet">Support BoardSeatMeet.com</a>
+            <a class="nav-link js-scroll-trigger" href="http://www.paypal.me/BoardSeatMeet">Support BoardSeatMeet Inc</a>
           </li> 
         </ul>
       </div>
@@ -56,9 +56,9 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Vanessa Camones</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Board Member of BoardSeatMeet, Inc.</h2>
-        <a href="http://www.boardseatmeet.com" class="btn btn-primary js-scroll-trigger">Support BoardSeatMeet, Inc.</a>
+        <h1 class="mx-auto my-0 text-uppercase">BoardSeatMeet</h1>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">For the High Performance Boardroom of Tomorrow.</h2>
+        <a href="http://www.boardseatmeet.com" class="btn btn-primary js-scroll-trigger">Support BoardSeatMeet Inc.</a>
       </div>
     </div>
   </header>
@@ -68,9 +68,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Our Mission</h2>
+          <p class="text-white-50">BoardSeatMeet's mission is to advance gender diversity within corporate boardrooms - private, public, or not-for-profit organizations - by orchestrating the social capital between board members and women are board-ready today, or need the training to get there. 
+            <!-- <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p> -->
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
@@ -84,12 +84,13 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead2.jpg" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Modernizing the Approach</h4>
+            <p class="text-black-50 mb-0">     BoardSeatMeet Inc is a nonprofit research organization primarily organized to conduct applied research to meet a recognized need.  That need is to get more women on corporate boards.  We will accomplish this with a modern technology platform that will address Women Leadership Training, Management and Technical Assistance and Vocational Counseling.   </p>
+            <p class="text-black-50 mb-0">     Our 1:1 network orchestration platform enables seamless and personal connections between executive candidates who want to accelerate their professional trajectory and start preparing for a board seat and C level opportunities.</p>
           </div>
         </div>
       </div>
@@ -103,8 +104,10 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">For High Performance</h4>
+                <p class="mb-0 text-white-50">     76% of companies have acknowledged a business case for gender diversity in top-level leadership—but only 13% have taken the next step of calculating the positive impact.Organizations with executive-level gender diversity outperform those with homogenous executive teams by 21%. </p>
+                <p class="mb-0 text-white-50">     Ethnic and cultural diversity also correlates with profitability—they are 33% more likely to outperform, and more successful attracting top talent, show greater employee satisfaction, and improve decision-making.</p>
+                <p class="mb-0 text-white-50">  For gender, the executive team shows the strongest correlation of positive impact and this is where BSM can make all the difference!</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -121,8 +124,9 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">For Compliance</h4>
+                <p class="mb-0 text-white-50">CA Senate Bill 826 requires publicly traded companies in CA to have at least one woman on their board by the end of 2019, and half their board be women by the end of 2021 for boards with  6 or more seats.</p>
+                <p class="mb-0 text-white-50">     More significantly, 29 USC Chapter 27 requires setting up a "local computerized data base referral system to maintain a current list of tradeswomen who are available for work." Since the business community did not prepare and invest in such a system, we at BoardSeatMeet are undertaking the challenge to develop a web, iOS and Android application solution to address workplace issues related to gender.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -164,7 +168,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">99 S Almaden Blvd, Suite 600, San Jose, CA 95113</div>
             </div>
           </div>
         </div>
@@ -176,7 +180,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">hello@boardseatmeet.com</a>
               </div>
             </div>
           </div>
@@ -188,7 +192,7 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">+1 (408) 357 4649</div>
             </div>
           </div>
         </div>
@@ -212,7 +216,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; BoardSeatMeet Inc 2019
     </div>
   </footer>
 
