--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">BoardSeatMeet</h1>
+        <!-- <h1 class="mx-auto my-0 text-uppercase">BoardSeatMeet</h1> -->
         <h2 class="text-white-50 mx-auto mt-2 mb-5">For the High Performance Boardroom of Tomorrow.</h2>
         <a href="http://www.boardseatmeet.com" class="btn btn-primary js-scroll-trigger">Support BoardSeatMeet Inc.</a>
       </div>
@@ -105,9 +105,9 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">For High Performance</h4>
-                <p class="mb-0 text-white-50">     76% of companies have acknowledged a business case for gender diversity in top-level leadership—but only 13% have taken the next step of calculating the positive impact.Organizations with executive-level gender diversity outperform those with homogenous executive teams by 21%. </p>
-                <p class="mb-0 text-white-50">     Ethnic and cultural diversity also correlates with profitability—they are 33% more likely to outperform, and more successful attracting top talent, show greater employee satisfaction, and improve decision-making.</p>
-                <p class="mb-0 text-white-50">  For gender, the executive team shows the strongest correlation of positive impact and this is where BSM can make all the difference!</p>
+                <p class="mb-0 text-white-50">&#9675; 76% of companies have acknowledged a business case for gender diversity in top-level leadership—but only 13% have taken the next step of calculating the positive impact.Organizations with executive-level gender diversity outperform those with homogenous executive teams by 21%. </p>
+                <p class="mb-0 text-white-50">&#9675; Ethnic and cultural diversity also correlates with profitability—they are 33% more likely to outperform, and more successful attracting top talent, show greater employee satisfaction, and improve decision-making.</p>
+                <p class="mb-0 text-white-50">&#9675; For gender, the executive team shows the strongest correlation of positive impact and this is where BSM can make all the difference!</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -126,7 +126,7 @@
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">For Compliance</h4>
                 <p class="mb-0 text-white-50">CA Senate Bill 826 requires publicly traded companies in CA to have at least one woman on their board by the end of 2019, and half their board be women by the end of 2021 for boards with  6 or more seats.</p>
-                <p class="mb-0 text-white-50">     More significantly, 29 USC Chapter 27 requires setting up a "local computerized data base referral system to maintain a current list of tradeswomen who are available for work." Since the business community did not prepare and invest in such a system, we at BoardSeatMeet are undertaking the challenge to develop a web, iOS and Android application solution to address workplace issues related to gender.</p>
+                <p class="mb-0 text-white-50"> <br>More significantly, 29 USC Chapter 27 requires setting up a "local computerized data base referral system to maintain a current list of tradeswomen who are available for work." Since the business community did not prepare and invest in such a system, we at BoardSeatMeet are undertaking the challenge to develop a web, iOS and Android application solution to address workplace issues related to gender.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -168,7 +168,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">99 S Almaden Blvd, Suite 600, San Jose, CA 95113</div>
+              <div class="small text-black-50">99 South Almaden Boulevard, Suite 600 <br> San Jose, CA 95113</div>
             </div>
           </div>
         </div>
