--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Modernizing the Approach</h4>
-            <p class="text-black-50 mb-0">     BoardSeatMeet Inc is a nonprofit research organization primarily organized to conduct applied research to meet a recognized need.  That need is to get more women on corporate boards.  We will accomplish this with a modern technology platform that will address Women Leadership Training, Management and Technical Assistance and Vocational Counseling.   </p>
+            <p class="text-black-50 mb-0">     BoardSeatMeet Inc is a nonprofit research organization primarily organized to conduct applied research to meet a recognized need.  That need is to get more women on corporate boards.  We will accomplish this with a modern technology platform that will address Women Leadership Training, Management and Technical Assistance and Vocational Counseling.   </p><br>
             <p class="text-black-50 mb-0">     Our 1:1 network orchestration platform enables seamless and personal connections between executive candidates who want to accelerate their professional trajectory and start preparing for a board seat and C level opportunities.</p>
           </div>
         </div>
@@ -106,8 +106,8 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">For High Performance</h4>
                 <p class="mb-0 text-white-50">&#9675; 76% of companies have acknowledged a business case for gender diversity in top-level leadership—but only 13% have taken the next step of calculating the positive impact.Organizations with executive-level gender diversity outperform those with homogenous executive teams by 21%. </p>
-                <p class="mb-0 text-white-50">&#9675; Ethnic and cultural diversity also correlates with profitability—they are 33% more likely to outperform, and more successful attracting top talent, show greater employee satisfaction, and improve decision-making.</p>
-                <p class="mb-0 text-white-50">&#9675; For gender, the executive team shows the strongest correlation of positive impact and this is where BSM can make all the difference!</p>
+                <p class="mb-0 text-white-50"><br>&#9675; Ethnic and cultural diversity also correlates with profitability—they are 33% more likely to outperform, and more successful attracting top talent, show greater employee satisfaction, and improve decision-making.</p>
+                <p class="mb-0 text-white-50"><br>&#9675; For gender, the executive team shows the strongest correlation of positive impact and this is where BSM can make all the difference!</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -180,7 +180,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@boardseatmeet.com</a>
+                <a href="#">join@boardseatmeet.com</a>
               </div>
             </div>
           </div>
