--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="mx-auto text-center">
         <!-- <h1 class="mx-auto my-0 text-uppercase">BoardSeatMeet</h1> -->
         <h2 class="text-white-50 mx-auto mt-2 mb-5">For the High Performance Boardroom of Tomorrow.</h2>
-        <a href="http://www.boardseatmeet.com" class="btn btn-primary js-scroll-trigger">Support BoardSeatMeet Inc.</a>
+        <a href="http://www.paypal.me/BoardSeatMeet" class="btn btn-primary js-scroll-trigger">Support BoardSeatMeet Inc.</a>
       </div>
     </div>
   </header>
