--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="http://tinyurl.com/yyvpausk">Tweet Us!</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Modernizing the Approach</a>
           </li>
           <li class="nav-item">
@@ -180,7 +183,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">join@boardseatmeet.com</a>
+                <a href="mailto:join@boardseatmeet">join@boardseatmeet.com</a>
               </div>
             </div>
           </div>
@@ -199,14 +202,14 @@
       </div>
 
       <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
+        <a href="https://twitter.com/BoardSeatMeet" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://www.fb.com/boardseatmeet" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
+        <a href="https://www.linkedin.com/company/3829922/admin/" class="mx-2">
+          <i class="fab fa-linkedin"></i>
         </a>
       </div>
 
@@ -216,7 +219,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; BoardSeatMeet Inc 2019
+      Copyright &copy; BoardSeatMeet Inc 2019 ; 501(c)(3) Pending
     </div>
   </footer>
 
