--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Our Mission</h2>
-          <p class="text-white-50">BoardSeatMeet's mission is to advance gender diversity within corporate boardrooms - private, public, or not-for-profit organizations - by orchestrating the social capital between board members and women are board-ready today, or need the training to get there. 
+          <p class="text-white-50">BoardSeatMeet's mission is to advance gender diversity within corporate boardrooms - private, public, or not-for-profit organizations - by orchestrating the social capital between board members and women who are board-ready today, or need the training to get there. 
             <!-- <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p> -->
         </div>
       </div>
